# pixel

./: CMakeLists.txt  README.md  TODO.md  build.sh  pixelConfig.cmake.in
examples/colors/src/: colors.cpp
examples/conway/src/: conway.cpp
examples/cpponsea/src/: cpponsea.cpp
examples/image_swap/src/: image_swap.cpp
examples/mousetrail/src/: mousetrail.cpp
examples/platformer/src/: platformer.cpp
examples/randomdots/src/: randomdots.cpp
examples/simple/src/: simple.cpp
examples/starfield/src/: starfield.cpp
pixel/include/: pixel.hh
pixel/include/pixel/: Canvas.hpp  Color.hpp  Window.hpp
pixel/src/: Canvas.cpp  Window.cpp  shaders.cpp
